<resources>
    <string name="app_name">K·Mi</string>
    <string name="str_start">START</string>
    <string name="main_nav_mesg_txt">特讯</string>
    <string name="main_nav_home_txt">推荐</string>
    <string name="main_nav_hap_txt">娱乐</string>
    <string name="main_nav_self_txt">设置</string>
    <string name="fram_self_login_txt">LOGIN -- 登录 </string>
    <string name="fram_mesg_list_loadmore">加载更多</string>
    <string name="fram_mesg_list_nodata">还扯， 都到底了 别扯了！</string>
    <string name="fram_mesg_get_list">数据请求中</string>
    <string name="mesg_lable_watch">视频</string>
    <string name="mesg_lable_new">新闻</string>
    <string name="mesg_lable_music">听歌</string>
    <string name="mesg_music_more">更多</string>
    <string name="mesg_music_update">换一批</string>

    <string name="new_test_content1">　　中新网6月8日电 国家发展改革委副主任林念修8日介绍，《海南自由贸易港建设总体方案》的推进实施可以分为打基础和全面推进两个阶段。第一个阶段，从现在起到2025年以前主要是打基础、做准备，在这一阶段适时启动全岛封关运作。第二个阶段，2035年以前，主要是全面推进自由贸易港政策落地见效。</string>
    <string name="new_test_content2">　　6月1日，《海南自由贸易港建设总体方案》正式公布。国新办6月8日举行发布会，介绍《海南自由贸易港建设总体方案》有关情况，并回答记者提问。</string>
    <string name="new_test_content3">　　林念修在会上介绍，总的来看，《总体方案》始终把握三个关键点：第一，坚持党的集中统一领导，坚持中国特色社会主义制度；第二，对接国际高水平经贸规则，把制度集成创新摆在重要的位置上，促进生产要素自由便利流动；第三，成熟一项推动一项，行稳致远，久久为功。想用一个非常简单的概括，就是把准方向、集成创新、自由便利、步步为营。</string>
    <string name="new_test_content4">　　林念修指出，《总体方案》的主要内容可以概括为“6+1+4”。</string>
    <string name="new_test_content5">　　“6”就是贸易自由便利、投资自由便利、跨境资金流动自由便利、人员进出自由便利、运输来往自由便利、数据安全有序流动。围绕这6个方面，《总体方案》作出了一系列制度安排。</string>
    <string name="new_test_content6">贸易自由便利方面，对货物贸易，简单的说就是“零关税”，就是实行以“零关税”为基本特征的自由化便利化制度安排。对服务贸易，简单说就是“既准入又准营”，将实行以“既准入又准营”为基本特征的自由化便利化一系列政策举措。

　　投资自由便利方面，一句话，“非禁即入”，就是大幅放宽海南自由贸易市场准入，实行“非禁即入”制，进一步激发各类市场主体的活力。

　　跨境资金流动自由便利方面，强调金融服务实体经济，围绕贸易投资自由化便利化，分阶段开放资本项目，有序推进海南自由贸易港与境外资金自由便利流动。

　　人员进出自由便利方面，针对高端产业人才，实行更加开放的人才和停居留政策，目的是打造人才聚集的高地。

　　关于运输往来自由便利方面，将实行高度自由便利开放的运输政策，推动建设西部陆海新通道国际航运枢纽和航空枢纽。

　　数据安全有序流动方面，要在确保数据流动安全可控的前提下，扩大数据领域开放，培育发展数字经济。

　　“1”就是构建现代产业体系。特别强调要突出海南的优势和特色，大力发展旅游业、现代服务业和高新技术产业，进一步夯实实体经济的基础，增强经济创新力和竞争力。

　　“4”就是要加强税收、社会治理、法治、风险防控等四个方面的制度建设。

　　一是按照零关税、低税率、简税制、强法治、分阶段的原则，逐步建立与高水平自由贸易港相适应的税收制度。

　　二是着力推进政府机构改革和政府职能转变，构建系统完备、科学规范、运行有效的自由贸易港治理体系。

　　三是建立以海南自由贸易港法为基础，以地方性法规和商事纠纷经济解决机制为重要组成的自由贸易港法治体系，营造国际一流的自由贸易港法治环境。

　　四是制定实施有效措施，有针对性防范化解贸易、投资、金融、公共卫生、生态等领域的重大风险，牢牢守住不发生系统性风险的底线。

　　林念修介绍，《总体方案》的推进实施可以分为打基础和全面推进两个阶段。

　　第一个阶段，从现在起到2025年以前主要是打基础、做准备。这一阶段的目标任务是，突出贸易投资自由化便利化，在有效监管的基础上，有序推进开放进程，推动各类要素便捷高效流动，形成早期收获，适时启动全岛封关运作。围绕这一目标任务，我们将抓紧开展工作，争取用3年左右的时间能够取得突破性的进展，为全面封关奠定一个良好的基础。

　　第二个阶段，2035年以前，主要是全面推进自由贸易港政策落地见效。这一阶段的目标任务是，进一步优化完善开放政策和相关制度安排，实现贸易自由便利、投资自由便利、跨境资金流动自由便利、人员进出自由便利、运输来往自由便利和数据安全有序流动，基本形成完备的法律法规体系、现代产业体系和现代化社会治理体系，打造我国开放型经济新高地。

　　林念修表示，下一步，国家发展改革委将会同海南省和有关部门，按照《总体方案》的要求，突出重点环节和关键领域，坚持“管得住”才能“放得开”的原则，把握好分步骤分阶段实施的推进节奏，只争朝夕，扎实稳妥，推动各项政策措施尽快落地见效，高质量高标准的建设海南自由贸易港。</string>


</resources>
