<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:gravity="center"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:layout_marginTop="10dp"
            android:textColor="@color/colorMainNavTxTrue"
            android:textSize="20dp"
            android:text="@string/main_nav_mesg_txt"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <LinearLayout
            android:padding="2dp"
            android:background="@color/colorListViewbg"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <TextView
                android:background="@color/colorTheme"
                android:textColor="@color/colorRbtnBg"
                android:id="@+id/ball_mesg_tv_new"
                android:text="@string/mesg_lable_new"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/ball_mesg_tv_watch"
                android:text="@string/mesg_lable_watch"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
            <TextView
                android:id="@+id/ball_mesg_tv_music"
                android:text="@string/mesg_lable_music"
                android:layout_weight="1"
                android:gravity="center"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>
        </LinearLayout>

        <androidx.viewpager.widget.ViewPager
            android:background="@color/colorMesgConBg"
            android:id="@+id/mesg_vp_content"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</FrameLayout>