<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    tools:context=".MainActivity">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <FrameLayout
            android:id="@+id/ball_flt"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:layout_height="match_parent">
            <com.melnykov.fab.FloatingActionButton
                android:layout_gravity="right|bottom"
                android:id="@+id/ft_btn"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:elevation="8dp"
                android:layout_margin="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/sucefloat"/>
        </FrameLayout>

        <LinearLayout
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:id="@+id/ball_rgp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="@color/colorRbtnBg">

            <LinearLayout
                android:id="@+id/ball_llt_mesg"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="40dp">
                <ImageView
                    android:id="@+id/ball_iv_mesg"
                    android:src="@drawable/ball_rbtn_mesg_selector"
                    android:contentDescription="@null"
                    android:layout_width="61px"
                    android:layout_height="61px"/>
                <TextView
                    android:id="@+id/ball_tv_mesg"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_nav_mesg_txt"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ball_llt_home"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="40dp">
                <ImageView
                    android:id="@+id/ball_iv_home"
                    android:src="@drawable/ball_rbtn_home_selector"
                    android:layout_width="61px"
                    android:contentDescription="@null"
                    android:layout_height="61px"/>
                <TextView
                    android:id="@+id/ball_tv_home"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_nav_home_txt" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ball_llt_hap"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="40dp">
                <ImageView
                    android:id="@+id/ball_iv_hap"
                    android:src="@drawable/ball_rbtn_hap_selector"
                    android:layout_width="61px"
                    android:contentDescription="@null"
                    android:layout_height="61px"/>
                <TextView
                    android:id="@+id/ball_tv_hap"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_nav_hap_txt"/>
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ball_llt_self"
                android:gravity="center"
                android:layout_weight="1"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="40dp">
                <ImageView
                    android:id="@+id/ball_iv_self"
                    android:contentDescription="@null"
                    android:src="@drawable/ball_rbtn_self_selector"
                    android:layout_width="61px"
                    android:layout_height="61px"/>
                <TextView
                    android:id="@+id/ball_tv_self"
                    android:textSize="14sp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/main_nav_self_txt"/>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
    <com.google.android.material.navigation.NavigationView
        android:background="@drawable/nav_bg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:id="@+id/nav_view"
        app:menu = "@menu/nav_menu"
        app:headerLayout="@layout/nav_header"/>

</androidx.drawerlayout.widget.DrawerLayout>