<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/music_bg"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <FrameLayout
            android:layout_marginTop="7dp"
            android:background="@color/colorMainNavTxFalse"
            android:padding="6dp"
            android:layout_width="match_parent"
            android:layout_height="40dp">
            <TextView
                android:text="标题栏目"
                android:textColor="@color/colorListViewbg"
                android:id="@+id/music_tv_type"
                android:layout_gravity="center|left"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                android:textColor="@color/colorListViewbg"
                android:layout_marginRight="24dp"
                android:text="@string/mesg_music_more"
                android:id="@+id/music_tv_more"
                android:layout_gravity="center|right"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <ImageView
                android:layout_gravity="center|right"
                android:src="@drawable/music_more"
                android:layout_width="20dp"
                android:layout_height="20dp"/>
        </FrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/mesg_music_rv_type_one"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!--    换一批-->
        <LinearLayout
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@color/colormusicBg"
            android:gravity="center"
            android:id="@+id/music_ll_update"
            android:layout_width="match_parent"
            android:layout_height="50dp">
            <ImageView
                android:id="@+id/music_iv_update"
                android:src="@drawable/music_update"
                android:layout_width="40dp"
                android:layout_height="40dp"/>
            <TextView
                android:id="@+id/music_tv_update"
                android:text="@string/mesg_music_update"
                android:textColor="@color/colorListViewbg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/llt_isrequest"
            android:gravity="center"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ProgressBar
                android:layout_gravity="center"
                android:layout_width="30dp"
                android:layout_height="30dp"/>
            <TextView
                android:textColor="@color/colorListViewbg"
                android:text="@string/fram_mesg_get_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
        </LinearLayout>

        <com.youth.banner.Banner
            android:padding="10dp"
            android:id="@+id/music_banner"
            android:layout_width="match_parent"
            android:layout_height="140dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:layout_marginTop="5dp"
            android:id="@+id/mesg_music_rv_type_two"
            android:layout_width="match_parent"
            android:layout_height="950dp"/>

        <ImageView
            android:padding="10dp"
            android:src="@drawable/music_set_img"
            android:layout_width="match_parent"
            android:layout_height="140dp"/>

        <TextView
            android:textColor="@color/colorRbtnBg"
            android:layout_gravity="center|bottom"
            android:text="已经滑动到底部了哟"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</ScrollView>